--- a/static_tourism_website/index.css
+++ b/static_tourism_website/index.css
@@ -1,24 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.bg-contianer {
+.bg-container {
   background-image: url("https://img.freepik.com/free-photo/north-beach-ocean-nazare-portugal_1268-14126.jpg?t=st=1731736456~exp=1731740056~hmac=5b28e5d48d5e8f7eaea90baf58cda4ec97b9cafe5bde4296128b9cab5b06d52c&w=740");
   height: 100vh;
   background-size: cover;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: end; */
 }
 
-.card-container {
+.toursim-card {
   text-align: center;
   background-color: white;
   border-top-left-radius: 35px;
   border-top-right-radius: 35px;
   padding: 10px;
-  margin-top: auto;
 }
 
 .main-heading {
@@ -35,7 +35,7 @@
   font-family: "Roboto";
 }
 
-.button {
+/* .button {
   height: 36px;
   width: 138px;
   background-color: #25b1cc;
@@ -44,3 +44,7 @@
   border-radius: 25px;
   cursor: pointer;
 }
+
+.button-orange {
+  background-color: #f7931e;
+} */
