--- a/static_tourism_website/index.css
+++ b/static_tourism_website/index.css
@@ -8,9 +8,7 @@
   background-image: url("https://img.freepik.com/free-photo/north-beach-ocean-nazare-portugal_1268-14126.jpg?t=st=1731736456~exp=1731740056~hmac=5b28e5d48d5e8f7eaea90baf58cda4ec97b9cafe5bde4296128b9cab5b06d52c&w=740");
   height: 100vh;
   background-size: cover;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: end; */
+  background-position: center;
 }
 
 .toursim-card {
@@ -47,7 +45,6 @@
 
 .favorite-place-bg-container {
   background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/towerbg.png");
-  height: 100vh;
   background-size: cover;
   padding: 24px;
 }
@@ -87,7 +84,7 @@
 .detailed-view-bg-container {
   background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/seabg.png");
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .detailed-view-heading {
@@ -116,4 +113,12 @@
   font-family: "Roboto";
   font-size: 13px;
   color: #6c6b70;
+}
+
+.unordered-list {
+  list-style-type: circle;
+}
+
+.orderd-list {
+  list-style-type: lower-roman;
 }
